--- a/notes/biblio.bib
+++ b/notes/biblio.bib
@@ -71,7 +71,6 @@ doi={10.5194/se-13-1-2022},
 volume={13},
 year={2022}}
 
-
 article{wanu84,
 title={Porosity reduction and crustal pore pressure development},
 author={Walder, Joseph and Nur, Amos},
@@ -81,4 +80,58 @@ number={B13},
 pages={11539--11548},
 doi={10.1029/JB089iB13p11539},
 year={1984}}
+
+@article{elga10,
+title={{Samovar: a thermomechanical code for modeling of geodynamic processes in the lithospshere -- 
+application to basin evolution}},
+author={Y. Elesin and T. Gerya and I.M. Artemieva and H. Thybo},
+journal={Arabian Journal of Geosciences},
+volume={3},
+pages={477-497},
+doi={10.1007/s12517-010-0215-1},
+year={2010}}
+
+@article{frbt19,
+title={{Efficient and Practical Newton Solvers for Nonlinear Stokes Systems in Geodynamic Problems}},
+author={M.R.T. Fraters and W. Bangerth and C. Thieulot and A.C. Glerum and W. Spakman },
+journal=gji,
+volume={218},
+pages={873--894},
+doi={10.1093/gji/ggz183},
+year={2019}}
+
+@book{gery10,
+Author = {Taras Gerya},
+Publisher = {Cambridge University Press},
+Title = {Numerical Geodynamic Modelling},
+Year = {2010}}
+
+@article{geyu03,
+Author = {T.V. Gerya and D.A. Yuen},
+Journal = pepi, 
+Pages = {293-318},
+Title = {Characteristics-based marker-in-cell method with conservative finite-differences 
+schemes for modeling geological flows with strongly variable transport properties},
+doi={10.1016/j.pepi.2003.09.006},
+Volume = {140},
+Year = {2003}}
+
+@book{tack10,
+Author = {Alik Ismail-Zadeh and Paul Tackley},
+Publisher = {Cambridge University Press},
+Title = {Computational Methods for Geodynamics},
+Year = {2010}}
+
+@article{dumg11,
+title={Discretization errors and free surface stabilisation in the finite difference and 
+marker-in-cell method for applied geodynamics: A numerical study},
+author={T. Duretz and D.A. May and T.V. Gerya and P.J. Tackley},
+journal=g3,
+volume={12},
+number={Q07004},
+doi={10.1029/2011GC003567},
+year={2011}}
+
+
+
 
