--- a/notes/biblio.bib
+++ b/notes/biblio.bib
@@ -71,7 +71,7 @@ doi={10.5194/se-13-1-2022},
 volume={13},
 year={2022}}
 
-article{wanu84,
+@article{wanu84,
 title={Porosity reduction and crustal pore pressure development},
 author={Walder, Joseph and Nur, Amos},
 journal={Journal of Geophysical Research: Solid Earth},
@@ -133,5 +133,14 @@ doi={10.1029/2011GC003567},
 year={2011}}
 
 
+@article{zhon96,
+title={Analytic solutions for Stokes' flow with lateral variations in viscosity},
+author={Zhong, Shijie},
+journal={Geophys. J. Int.},
+volume={124},
+number={1},
+pages={18-28},
+doi={10.1111/j.1365-246X.1996.tb06349.x},
+year={1996}}
 
 
